feat: Add script entry point for React app
Includes the `<script type="module" src="./index.tsx"></script>` tag in `index.html` to enable the React application to initialize and mount to the `#root` element. This is the primary entry point for the frontend.

--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- Script entry point để React có thể khởi tạo ứng dụng -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
